--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 9, 18, 53;
+  --background-end-rgb: 9, 18, 53;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -18,6 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  height:100vh;
+  width: 100vw;
   background: linear-gradient(
       to bottom,
       transparent,
